# web-app-service

./: docker-compose.yaml  nginx.conf  pyproject.toml
front/chat/: chat.html  chat.js  index.html  script.js  styles.css
front/dict/: app.js  index.html  styles.css
front/main/: index.html
src/: config.py
src/endpoints/: dictionary.py  matchmaking.py  waiting_room.py  websockets.py
src/models/: dict_models.py
src/validators/: tokens.py
